# superlamp

frontend-and-backend/: .gitignore  README-CRON.md  README.md  cleanup-droplets.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
frontend-and-backend/data/: marketplace.json  vultr-plans.json  vultr-regions.json
frontend-and-backend/prisma/: schema.prisma
frontend-and-backend/scripts/: run-cron.js
frontend-and-backend/src/app/: globals.css  layout.tsx  page.tsx
frontend-and-backend/src/app/api/droplets/: route.ts
frontend-and-backend/src/app/api/droplets/live/: route.ts
frontend-and-backend/src/app/api/marketplace/: route.ts
frontend-and-backend/src/app/api/users/: route.ts
frontend-and-backend/src/app/dashboard/: page.tsx
frontend-and-backend/src/app/marketplace/: page.tsx
frontend-and-backend/src/components/: chat-interface.tsx  dashboard.tsx  gpu-analytics-modal.tsx  navbar.tsx  repo-card.tsx
frontend-and-backend/src/components/project/: project-form.tsx
frontend-and-backend/src/components/ui/: badge.tsx  client-only.tsx  input.tsx  theme-animations.ts  theme-toggle-button.tsx
frontend-and-backend/src/hooks/: useAuth.ts  useDropletAnalytics.ts  useDropletCreation.ts  useDropletDeletion.ts  useRepos.ts  useUser.ts
frontend-and-backend/src/lib/: api-client.ts  job-logs-store.ts  resolve-job.ts  workload-script.ts
frontend-and-backend/src/login/: page.tsx
python/: .env  pyproject.toml
python/scripts/: vectorize_docs.py
python/src/: agent.py  cli.py  main.py  models.py  prompt.py  tools.py  utils.py
(+13 files in other folders)
