[project]
name = "superlamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
